# osc2024

./: .gitignore  Cargo.toml  README.md  rust-toolchain.toml  vuc.c
bins/bootloader/: Cargo.toml  Makefile  linker.ld
bins/kernel-transfer/: Cargo.toml
bins/ppos/: Cargo.toml  Makefile  linker.ld
bins/ppos/src/: boot.s  driver.rs  entry.S  main.rs  memory.rs  shell.rs
bins/ppos/src/memory/: heap_allocator.rs
lab1/: kernel8.elf  kernel8.img  mailbox.c  main.c  reboot.c  shell.c  uart.c
lab2/bootloader/: Makefile  boot_kernel.elf  boot_kernel.img  bootloader.c  config.txt  initramfs.cpio  kernel8.elf  kernel8.img  linker.ld  main.c  shell_kernel.img  start.S  uart.c  upload.py  utils.c
lab2/shell/: dtb.c  kernel8.elf  kernel8.img  linker.ld  main.c  shell.c  shell_kernel.elf  shell_kernel.img  start.S  test.py  uart.c  upload.py  utils.c
lab3/: except.c  kernel8.elf  main.c  shell.c
lab3/shell/: except.c  kernel8.elf  kernel8.img  main.c  shell.c  start.S  tasklist.c  timer.c  uart.c
lab3_ADEX2/shell/: except.c  kernel8.elf  kernel8.img  main.c  shell.c  start.S  tasklist.c  timer.c
lab3_asy/shell/: dtb.c  except.c  kernel8.elf  kernel8.img  main.c  shell.c  start.S  tasklist.c  timer.c  uart.c
lab4/shell/: Makefile  allocator.c  dtb.c  except.c  kernel8.elf  kernel8.img  main.c  uart.c
lab5/archive/: initramfs.cpio
lab5/include/: stddef.h
lab6/include/: mmu.h
lab6/kernel/: start.S
shell/: Makefile  allocator.c  config.txt  cpio.c  dtb.c  initramfs.cpio  linker.ld  mailbox.c  reboot.c  shell.c  shell_kernel.elf  start.S  utils.c
(+60 files in other folders)
