[package]
name = "ppos"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
library = { path = "../../libs/library" }
cpu = { path = "../../libs/cpu/" }
device = { path = "../../libs/device" }
bsp = { path = "../../libs/bsp" }
